--- a/src/components/landing/Hero1.astro
+++ b/src/components/landing/Hero1.astro
@@ -49,7 +49,7 @@ const {bgimage} = Astro.props
 
         <!-- content -->
         <div class=" h-screen p-0 m-0 text-zinc-500 text-xs">
-          <iframe aria-label='Contact Form' style="height:100%; width:100%; border:none;" src='https://forms.zohopublic.com/administrator81/form/ProductReview/formperma/1SLy2_XE9PEXvFojgtAmiTZT6dLJ5GYdQ61n5p6RFKw'></iframe>
+          <iframe aria-label='Contact Form' style="height:100%; width:100%; border:none;" loading="lazy" src='https://forms.zohopublic.com/administrator81/form/ProductReview/formperma/1SLy2_XE9PEXvFojgtAmiTZT6dLJ5GYdQ61n5p6RFKw'></iframe>
         </div>
     </div>
 </div>
@@ -79,7 +79,7 @@ const {bgimage} = Astro.props
 
         <!-- content -->
         <div class=" h-screen p-0 m-0 text-zinc-500 text-xs">
-          <iframe aria-label='Contact Form' style="height:100%; width:100%; border:none;" src='https://booking.setmore.com/scheduleappointment/cf2efb8d-73c7-4d6c-97c6-5b0729e6d397'></iframe>
+          <iframe aria-label='Contact Form' style="height:100%; width:100%; border:none;" loading="lazy" src='https://booking.setmore.com/scheduleappointment/cf2efb8d-73c7-4d6c-97c6-5b0729e6d397'></iframe>
         </div>
     </div>
 </div>
