--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -1,8 +1,7 @@
 ---
-import { getAllPages } from "../../lib/cosmic"
-const data2 = await getAllPages()
+import { getNavLinks } from "../../lib/cosmic";
+const data2 = await getNavLinks();
 ---
-
 <div class="top-0 z-40 justify-center w-full mx-auto bg-smoke border-b">
   <div x-data="{ open: false }" class="flex flex-col w-full px-8 py-3 mx-auto md:px-12 md:items-center md:justify-between md:flex-row lg:px-32 max-w-7xl">
     <div class="flex flex-row items-center justify-between">
