--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 import Hero1 from "@/components/landing/Hero1.astro";
 import Features from "@/components/landing/Features.astro";
 import Testimonials from "@/components/landing/Testimonials.astro";
-import Posts from "../components/landing/Posts.astro";
+import Posts from "@/components/landing/Posts.astro";
 import Articles from "@/components/landing/Articles.astro";
 import Pricing from "@/components/landing/Pricing.astro";
 ---
