Update to use optimized images

--- a/src/components/landing/Articles.astro
+++ b/src/components/landing/Articles.astro
@@ -16,7 +16,7 @@ const type = 'articles';
             title={article.title}
             href={article.slug}
             body={article.metadata.description}
-            image={article.metadata.cover_image.url}
+            image={article.metadata.cover_image.imgix_url + '?w=600'}
             type={type}
          />
         ))
