Switch from Calendly to Cal

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@ const { title, description, keywords, robots } = Astro.props;
 ---
 <meta charset="utf-8" />
 <base href={import.meta.env.SITE}>
-<link rel="canonical" href={Astro.request.url}>
+<link rel="canonical" href={Astro.request.url} />
 
 <title>{ title }</title>
 
