Update Astro, add dynamic date to footer.

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -40,7 +40,7 @@
       </div>
     </div>
     <nav class="pt-12 flex flex-col lg:flex-row gap-8 items-center">
-      <span class="text-xs text-zinc-600">© 2023 Rule The Web LLC</span>
+      <span class="text-xs text-zinc-600">© {new Date().getFullYear()} Rule The Web LLC</span>
       <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-xs text-zinc-600 transition-colors delay-150 hover:delay-[0ms] hover:bg-mirage"
         href="/#process"><span class="relative z-10">Terms of use</span></a>
   
