--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,13 +1,13 @@
 <footer class="bg-zinc-200 ring-1 ring-zinc-300">
-  <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-12">
+  <div class="px-12 py-12 mx-auto md:px-16 lg:px-32 lg:py-12">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8 items-start">
       <div class="inline-flex items-center gap-3 text-xl font-bold tracking-tight text-zinc-900">
         <a class="inline-flex items-center gap-0" href="/"><img src="img/logo2.png" /></a>
       </div>
       <div class="gap-8 xl:col-span-2 lg:ml-auto">
-        <div class="md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-8 lg:gap-20">
+        <div class="grid grid-cols-2 lg:grid-cols-4 md:gap-8 lg:gap-20">
           
-          <div class="mt-12 md:mt-0">
+          <div class="mt-12 lg:mt-0">
             <h3 class="text-zinc-900 text-base font-medium">Company</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
               <li><a href="/about/" class="text-zinc-600 hover:text-zinc-900">About</a></li>
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <nav class="pt-12 flex flex-col lg:flex-row gap-8 items-center">
+    <nav class="pt-12 flex flex-row gap-8 items-center">
       <span class="text-xs text-zinc-600">© {new Date().getFullYear()} Rule The Web LLC</span>
       <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-xs text-zinc-600 transition-colors delay-150 hover:delay-[0ms] hover:bg-mirage"
         href="/#process"><span class="relative z-10">Terms of use</span></a>
