--- a/src/components/landing/Articles.astro
+++ b/src/components/landing/Articles.astro
@@ -2,25 +2,28 @@
 import { getAllArticles } from "../../lib/cosmic";
 import Card from "../../components/global/Card.astro";
 const data = await getAllArticles();
-const type = 'articles';
+const type = "articles";
 ---
+
 <div class="w-full bg-zinc-200 mb-10 ring-1 ring-zinc-300">
-  <div class="mb-10 max-w-7xl mx-auto">
-  <div class="py-6 mx-6 lg:py-8">
-    <p class="text-xs font-bold tracking-wide uppercase text-zinc-500">latest articles</p>
-  </div> 
-    <ul class="px-6 pb-6 grid md:grid-cols-3 gap-8">
+  <div class="mb-10 max-w-8xl mx-auto">
+    <div class="py-6 mx-6 lg:py-8">
+      <p class="text-xs font-bold tracking-wide uppercase text-zinc-500">
+        latest articles
+      </p>
+    </div>
+    <div class="px-4 grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
       {
         data.map((article) => (
           <Card
             title={article.title}
             href={article.slug}
             body={article.metadata.description}
-            image={article.metadata.cover_image.imgix_url + '?w=600'}
+            image={article.metadata.cover_image.imgix_url + "?w=600"}
             type={type}
-         />
+          />
         ))
       }
-    </ul>
     </div>
   </div>
+</div>
