--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,10 +2,10 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Block from "@/components/global/Block.astro";
 import { getAllPosts } from "../../lib/cosmic";
-import { marked } from 'marked';
+import { marked } from "marked";
 
 export async function getStaticPaths() {
-const response = await getAllPosts()
+  const response = await getAllPosts();
 
   return response.map((post) => {
     return {
@@ -15,50 +15,39 @@ const response = await getAllPosts()
   });
 }
 
-const {post} = Astro.props;
+const { post } = Astro.props;
 
 //convert the Markdown to html
 const content = marked.parse(post.metadata.content);
 ---
+
 <BaseLayout
-title={post.title}
-description={post.exerpt}
-keywords=""
-robots="index, follow"
+  title={post.title}
+  description={post.exerpt}
+  keywords=""
+  robots="index, follow"
 >
-    <Block bgimage={post.metadata.cover_image.url}, blockheadline={post.title}, blockexcerpt={post.metadata.excerpt} />
-    <section>
-        <div class="tryit text-base text-zinc-500 px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
-            <Fragment set:html={content} />
-        </div>
-    </section>
-  </BaseLayout>
+  <Block
+    bgimage={post.metadata.cover_image.url}, blockheadline={post.title}, blockexcerpt={post.metadata.excerpt} />
+  <section>
+    <div class="tryit px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
+      <Fragment set:html={content} />
+    </div>
+  </section>
+</BaseLayout>
 
-  <style is:global>
-    p {
-      @apply text-base text-zinc-500;
-    }      
-    h2 {
-      @apply text-4xl font-semibold tracking-tighter text-zinc-900;
-    }
-    </style>
-
-    <style is:inline>
-    h2{
-    font-size: 2rem;
+<style is:inline>
+  p {
+    margin-top: 2rem;
+  }
+  h1, h2 {
+    font-size: 1.5rem;
     margin-top: 2rem;
   }
 
-  img {
-      @apply mx-2 mb-2 h-auto rounded-lg shadow-lg dark:shadow-gray-800;
-    }
-
-    p{
-    margin-top: 2rem;}
-    
-    .tryit > * img {
-      max-width: 40%;
-      float: right;
-    }
+  .tryit > * img {
+    max-width: 40%;
+    float: right;
+    margin: 1%;
+  }
 </style>
-
