--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-const { title, description, keywords, robots } = Astro.props;
+const { title, description, robots } = Astro.props;
 ---
 <meta charset="utf-8" />
 <base href={import.meta.env.SITE}>
@@ -8,7 +8,6 @@ const { title, description, keywords, robots } = Astro.props;
 <title>{ title }</title>
 
 <meta name="description" content={ description } />
-<meta name="keywords" content={ keywords } />
 <meta name="robots" content={ robots } />
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
