--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,15 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Block from "@/components/global/Block.astro";
+
 import { getAllPosts } from "../../lib/cosmic";
+
 import { marked } from "marked";
+
+marked.use({
+  pedantic: false,
+  gfm: true,
+});
 
 export async function getStaticPaths() {
   const response = await getAllPosts();
@@ -24,11 +31,13 @@ const content = marked.parse(post.metadata.content);
 <BaseLayout
   title={post.title}
   description={post.exerpt}
-  keywords=""
   robots="index, follow"
 >
   <Block
-    bgimage={post.metadata.cover_image.url}, blockheadline={post.title}, blockexcerpt={post.metadata.excerpt} />
+    bgimage={post.metadata.cover_image.url},
+    blockheadline={post.title},
+    blockexcerpt={post.metadata.excerpt}
+  />
   <section>
     <div class="tryit px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
       <Fragment set:html={content} />
